--- a/history.txt
+++ b/history.txt
@@ -3,5 +3,5 @@ A small thing of the in-story history.
 
 The year is 2154. Earth is engaged in a deadly, Civilization III-like war.
 Many empires have risen and fallen. All that is known is there are only two empires now: The Reds and The Blues.
-Both currently control two patches of land - one controls Spain, the other controls Mongolia.
+Both currently control two patches of land - one controls Spain, the other controls Sweden.
 Nobody knows how it will turn out, but hopefully one team will rise above all...
