--- a/history.txt
+++ b/history.txt
@@ -10,3 +10,5 @@ They were in peace, until they were provoked, and now they are at war...
 SPU 0: The declaration of war was official. Both teams now seek to destroy the other.
 
 13 SPUs later, the war began. Two generals on each side began rallying troops.
+
+At SPU 21, the conquest began. Red had moved their forces into Portugal and France, whereas Blue set out on conquering Scandanavia. Both sides were destined to collide soon.
