--- a/history.txt
+++ b/history.txt
@@ -12,5 +12,9 @@ SPU 0: The declaration of war was official. Both teams now seek to destroy the o
 13 SPUs later, the war began. Two generals on each side began rallying troops.
 
 At SPU 21, the conquest began. Red had moved their forces into Portugal and France, whereas Blue set out on conquering Scandanavia. Both sides were destined to collide soon.
+A third general had joined The Blues at this time.
 
 At SPU 23, The Reds seized control of Germany and Italy.
+
+At SPU 44, The Reds invaded and seized Slovenia, the Czech republic, and Austria. They now surround Switzerland fully.
+(Note: Blue Team's actions are currently backlogged and will be filled in here later.)
