Update to post 45 Forgot I could use sea routes.

--- a/history.txt
+++ b/history.txt
@@ -17,4 +17,8 @@ A third general had joined The Blues at this time.
 At SPU 23, The Reds seized control of Germany and Italy.
 
 At SPU 44, The Reds invaded and seized Slovenia, the Czech republic, and Austria. They now surround Switzerland fully.
+
+Shortly after, at SPU 45, The Reds took Morocco.
+
 (Note: Blue Team's actions are currently backlogged and will be filled in here later.)
+
