Update for post 48 and un-backlog Blue Team One of the Blue generals got back to me and now the game is up to date again.

--- a/history.txt
+++ b/history.txt
@@ -18,7 +18,4 @@ At SPU 23, The Reds seized control of Germany and Italy.
 
 At SPU 44, The Reds invaded and seized Slovenia, the Czech republic, and Austria. They now surround Switzerland fully.
 
-Shortly after, at SPU 45, The Reds took Morocco.
-
-(Note: Blue Team's actions are currently backlogged and will be filled in here later.)
-
+Shortly after, at SPU 47, The Reds took Morocco. Only 1 SPU later, The Blues took Russia. Many noted this as the beginning of the great race to conquer the continents.
