Update to post 70

--- a/history.txt
+++ b/history.txt
@@ -19,3 +19,8 @@ At SPU 23, The Reds seized control of Germany and Italy.
 At SPU 44, The Reds invaded and seized Slovenia, the Czech republic, and Austria. They now surround Switzerland fully.
 
 Shortly after, at SPU 47, The Reds took Morocco. Only 1 SPU later, The Blues took Russia. Many noted this as the beginning of the great race to conquer the continents.
+
+For a short while, there was quiet on the battlefronts as generals went to discuss their next course of action.
+
+At SPU 69, the Blues used Russian tanks to conquer Ukraine. This was the beginning of the soon-to-come war in the Baltics over control of Asia.
+Seeing this, 1 SPU after, the Reds responded by moving an Austrian tank into Hungary, thus capturing it.
