Update to post 81 Adds the new Green Team along with flags, history, and map updates

--- a/history.txt
+++ b/history.txt
@@ -24,3 +24,5 @@ For a short while, there was quiet on the battlefronts as generals went to discu
 
 At SPU 69, the Blues used Russian tanks to conquer Ukraine. This was the beginning of the soon-to-come war in the Baltics over control of Asia.
 Seeing this, 1 SPU after, the Reds responded by moving an Austrian tank into Hungary, thus capturing it.
+
+At SPU 81, General TBGChildGamer officially gained independence from Blue Team and formed Green Team in Alaska. With 5 foot units and a whole world to explore, s/he was certain to find new refuge.
