Update to post 92 Did not update history for post 92, though. Will do that later.

--- a/history.txt
+++ b/history.txt
@@ -27,5 +27,5 @@ Seeing this, 1 SPU after, the Reds responded by moving an Austrian tank into Hun
 
 At SPU 81, General TBGChildGamer officially gained independence from Blue Team and formed Green Team in Alaska. With 5 foot units and a whole world to explore, s/he was certain to find new refuge.
 
-At SPU 86, Green Team conquered Canada. Historians marked this as the beginning of TBGChildGamer's conquest throughout the Americas, running mostly unchallenged.
-2 SPUs later, The Reds began militarizing their control over Eastern Europe. They conquered Romania and quickly began blockading the advancement of The Blues. Using their spare troops they conquered nearby nations of the United Kingdom and Switzerland.
+A mere 5 SPUs later, Green Team conquered Canada. Historians marked this as the beginning of TBGChildGamer's conquest throughout the Americas, running mostly unchallenged.
+4 SPUs later, The Reds began militarizing their control over Eastern Europe. They conquered Romania and quickly began blockading the advancement of The Blues. Using their spare troops they conquered nearby nations of the United Kingdom and Switzerland.
