Update for post 93 + history

--- a/history.txt
+++ b/history.txt
@@ -29,3 +29,7 @@ At SPU 81, General TBGChildGamer officially gained independence from Blue Team a
 
 A mere 5 SPUs later, Green Team conquered Canada. Historians marked this as the beginning of TBGChildGamer's conquest throughout the Americas, running mostly unchallenged.
 4 SPUs later, The Reds began militarizing their control over Eastern Europe. They conquered Romania and quickly began blockading the advancement of The Blues. Using their spare troops they conquered nearby nations of the United Kingdom and Switzerland.
+
+At SPU 92, Red Team slowly crept downward with their new-claimed territory of Romania. They obtained control of Bulgaria and began stockpiling military near Ukraine, on the cutting edge of the Blue Team's forces.
+1 SPU before, Green Team took both Greenland and the USA. Red Team no longer had one front to fight on anymore.
+1 SPU after, Red Team took control of Algeria.
