Update history accordingly

--- a/history.txt
+++ b/history.txt
@@ -35,4 +35,4 @@ At SPU 92, Red Team slowly crept downward with their new-claimed territory of Ro
 1 SPU after, Red Team took control of Algeria.
 
 Over the course of the next few turns, Green Team ran completely unopposed throughout the Americas. Having seized Mexico, Cuba, and Venezuela, a strong foothold was gained within the Americas that alowed Green Team a heavily fortified base.
-Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewalk's command, they moved units into Libya and the Western Sahara, nearly ensuring that the tipping point of Egypt would be theirs. They also fortified their position in the Baltics by reinforcing Bulgaria and capturing Turkey.
+Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewalk's command, they moved units into Libya and the Western Sahara, nearly ensuring that the tipping point of Egypt would be theirs. They also fortified their position in the Baltics by reinforcing Bulgaria and capturing Turkey. In doing so they had adopted a new flag, one which more properly symbolized the glory of their Spain-based empire.
