--- a/history.txt
+++ b/history.txt
@@ -36,3 +36,5 @@ At SPU 92, Red Team slowly crept downward with their new-claimed territory of Ro
 
 Over the course of the next few turns, Green Team ran completely unopposed throughout the Americas. Having seized Mexico, Cuba, and Venezuela, a strong foothold was gained within the Americas that alowed Green Team a heavily fortified base.
 Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewalk's command, they moved units into Libya and the Western Sahara, nearly ensuring that the tipping point of Egypt would be theirs. They also fortified their position in the Baltics by reinforcing Bulgaria and capturing Turkey. In doing so they had adopted a new flag, one which more properly symbolized the glory of their Spain-based empire.
+
+Shortly after, at SPU 104, General Faressain joined The Blues and let a charge, taking the unclaimed territories of Poland and Belarus, and moving into China.
