Update to post 105 Red Team took part in the first battle and took Ukraine!

--- a/history.txt
+++ b/history.txt
@@ -38,3 +38,4 @@ Over the course of the next few turns, Green Team ran completely unopposed throu
 Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewalk's command, they moved units into Libya and the Western Sahara, nearly ensuring that the tipping point of Egypt would be theirs. They also fortified their position in the Baltics by reinforcing Bulgaria and capturing Turkey. In doing so they had adopted a new flag, one which more properly symbolized the glory of their Spain-based empire.
 
 Shortly after, at SPU 104, General Faressain joined The Blues and let a charge, taking the unclaimed territories of Poland and Belarus, and moving into China.
+1 SPU later, the first battle broke out in Ukraine. Red Team seized the Blue Team's territory, as well as Egypt, securing their hold on the Arabian Peninsula.
