--- a/history.txt
+++ b/history.txt
@@ -39,3 +39,5 @@ Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewa
 
 Shortly after, at SPU 104, General Faressain joined The Blues and let a charge, taking the unclaimed territories of Poland and Belarus, and moving into China.
 1 SPU later, the first battle broke out in Ukraine. Red Team seized the Blue Team's territory, as well as Egypt, securing their hold on the Arabian Peninsula.
+
+Meanwhile, a different battle waged on. Germany was briefly taken by Blue Team, but was near immediately recaptured by Red Team. The Reds also captured Saudi Arabia as part of their plan to enter Asia.
