Update to post 117

--- a/history.txt
+++ b/history.txt
@@ -41,3 +41,6 @@ Shortly after, at SPU 104, General Faressain joined The Blues and let a charge, 
 1 SPU later, the first battle broke out in Ukraine. Red Team seized the Blue Team's territory, as well as Egypt, securing their hold on the Arabian Peninsula.
 
 Meanwhile, a different battle waged on. Germany was briefly taken by Blue Team, but was near immediately recaptured by Red Team. The Reds also captured Saudi Arabia as part of their plan to enter Asia.
+
+Soon, Green Team sunk into the Americas. 11 of the 25 regions were under Green rule, several with new military units.
+Red Team managed to increase their control on the Arabian Peninsula. They took Iraq and sent new troops to Georgia. Their plans currently remained secret, but battle was coming. Right after this new territory was gained, they took part in a battle between Polish troops that resulted in a draw.
