Update to post 141

--- a/history.txt
+++ b/history.txt
@@ -46,3 +46,5 @@ Soon, Green Team sunk into the Americas. 11 of the 25 regions were under Green r
 Red Team managed to increase their control on the Arabian Peninsula. They took Iraq and sent new troops to Georgia. Their plans currently remained secret, but battle was coming. Right after this new territory was gained, they took part in a battle between Polish troops that resulted in a draw.
 
 Afterwards, General jj10dino of the Blue Team split off, and formed Yellow Team in Australia. They immediately organized a pact with Green Team for money in exchange for the Green Team's protection.
+
+Then, at SPU 139, a cease-fire pact was agreed upon by the Red, Green, and Yellow teams. Shortly after, Yellow Team took New Zealand.
