--- a/history.txt
+++ b/history.txt
@@ -47,4 +47,6 @@ Red Team managed to increase their control on the Arabian Peninsula. They took I
 
 Afterwards, General jj10dino of the Blue Team split off, and formed Yellow Team in Australia. They immediately organized a pact with Green Team for money in exchange for the Green Team's protection.
 
-Then, at SPU 139, a cease-fire pact was agreed upon by the Red, Green, and Yellow teams. Shortly after, Yellow Team took New Zealand.
+Then, at SPU 139, a cease-fire pact was agreed upon by the Red, Green, and Yellow teams. Shortly after, Yellow Team took New Zealand, and Red Team took Poland.
+
+Red Team's Ukrainian invasion of Poland was part of a bigger plan to destroy the Blue Team. The other 3 teams had agreed on a cease-fire as part of a plan to ensure the Blue Team's surrender.
