Update to post 158

--- a/history.txt
+++ b/history.txt
@@ -50,3 +50,5 @@ Afterwards, General jj10dino of the Blue Team split off, and formed Yellow Team 
 Then, at SPU 139, a cease-fire pact was agreed upon by the Red, Green, and Yellow teams. Shortly after, Yellow Team took New Zealand, and Red Team took Poland.
 
 Red Team's Ukrainian invasion of Poland was part of a bigger plan to destroy the Blue Team. The other 3 teams had agreed on a cease-fire as part of a plan to ensure the Blue Team's surrender.
+
+Leading up to SPU 158, Yellow Team expanded into Southeast Asia. Green Team successfully took China and Belarus, and Red Team expanded their reach out in Africa.
