--- a/history.txt
+++ b/history.txt
@@ -52,3 +52,5 @@ Then, at SPU 139, a cease-fire pact was agreed upon by the Red, Green, and Yello
 Red Team's Ukrainian invasion of Poland was part of a bigger plan to destroy the Blue Team. The other 3 teams had agreed on a cease-fire as part of a plan to ensure the Blue Team's surrender.
 
 Leading up to SPU 158, Yellow Team expanded into Southeast Asia. Green Team successfully took China and Belarus, and Red Team expanded their reach out in Africa.
+
+Then, at SPU 167, General Faressain split off from the Blues and formed the Maroon team in South Africa.
