Update to post 182

--- a/history.txt
+++ b/history.txt
@@ -54,3 +54,5 @@ Red Team's Ukrainian invasion of Poland was part of a bigger plan to destroy the
 Leading up to SPU 158, Yellow Team expanded into Southeast Asia. Green Team successfully took China and Belarus, and Red Team expanded their reach out in Africa.
 
 Then, at SPU 167, General Faressain split off from the Blues and formed the Maroon team in South Africa.
+
+Shortly after, the cease-fire was broken. The Green Team attacked and captured Ukraine with superior Russian forces. The Red Team attacked a weaker Russia twice, once with Georgian units, which failed, then once with Turkish and Iranian units, which succeeded.
