Fix board OK, so stupidly I forgot you can only battle once per turn. So I have to undo that last battle.

--- a/history.txt
+++ b/history.txt
@@ -55,4 +55,4 @@ Leading up to SPU 158, Yellow Team expanded into Southeast Asia. Green Team succ
 
 Then, at SPU 167, General Faressain split off from the Blues and formed the Maroon team in South Africa.
 
-Shortly after, the cease-fire was broken. The Green Team attacked and captured Ukraine with superior Russian forces. The Red Team attacked a weaker Russia twice, once with Georgian units, which failed, then once with Turkish and Iranian units, which succeeded.
+Shortly after, the cease-fire was broken. The Green Team attacked and captured Ukraine with superior Russian forces. The Red Team attacked a weaker Russia, but had failed.
